# python-gex

./: .gitignore  Makefile  README.md  pyproject.toml
src/gex/: __init__.py  __main__.py  adjacency.py  cli.py  constants.py  door.py  floor.py  gorand.py  items.py  maze.py  mazedecode.py  monsters.py  palettes.py  pfrender.py  rand.py  render.py  roms.py  wall.py
src/gex/data/: door_stamps.jsonc  item_stamps.json  item_stamps.jsonc  monsters.jsonc  wall_data.jsonc  wall_stamps.json  wall_stamps.jsonc
tests/: generate_reference_images.py  test_cli.py  test_constants.py  test_door.py  test_floor.py  test_golden_images.py  test_integration_roms.py  test_items.py  test_items_errors.py  test_mazedecode.py  test_monsters.py  test_palettes.py  test_pfrender.py  test_rand.py  test_reference_manifest.py  test_render.py  test_roms.py  test_wall.py
tests/data/: maze_catalog.csv
tests/reference_images/: manifest.json
